force-app/main/default/objects/Cryptocurrency__c/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <label>Currency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bitcoin (BTC)</fullName>
                <default>true</default>
                <label>Bitcoin (BTC)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>