force-app/main/default/objects/Cryptocurrency__c/fields/Tether_Price__c.field-meta.xml
<CustomField>
    <fullName>Tether_Price__c</fullName>
    <description>Tether is a blockchain-based cryptocurrency whose cryptocoins in circulation are backed by an equivalent amount of traditional fiat currencies, like the dollar, the euro or the Japanese yen, which are held in a designated bank account. Tether tokens, the native tokens of the Tether network, trade under the USDT symbol.</description>
    <inlineHelpText>USDT</inlineHelpText>
    <label>Tether Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>