force-app/main/default/objects/Cryptocurrency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tether_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>